--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 Trabalho Arima/COTAHIST_A2022.TXT
 Trabalho Arima/COTAHIST_A2024.TXT
 Trabalho Arima/COTAHIST_A2023.TXT
+Trabalho Arima/Arima2.ipynb
+Trabalho Arima/teset.ipynb
